[package]
name = "cache"
version = "0.1.16"
edition = "2018"
description = "A wrapper for redis crate used by Kalgan Framework."
homepage = "https://kalgan.eduardocasas.com"
repository = "https://github.com/eduardocasas/kalgan-cache"
license = "MIT OR Apache-2.0"

[[bin]]
name = "generate"
path = "sandbox/generate.rs"

[dependencies]
log = { version = "0.4" }
env_logger = "0.8.4"
redis = "0.21.3"