[package]
name = "kalgan_cache"
version = "0.9.0"
edition = "2018"
description = "A wrapper for redis crate used by Kalgan Framework."
homepage = "https://kalgan.eduardocasas.com"
repository = "https://github.com/eduardocasas/kalgan-cache"
license = "MIT OR Apache-2.0"

[dependencies]
log = { version = "0.4" }
redis = "0.21.3"
